2017-08-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed building with CMake 3.9+ (Bug 382680).

2017-07-16  Robby Stephenson  <robby@periapsis.org>

	* Added data source for kino.de.

2017-07-07  Robby Stephenson  <robby@periapsis.org>

	* Added message dialog for Amazon Associate warning (Bug 364784).

2017-07-06  Robby Stephenson  <robby@periapsis.org>

	* Added DBUS option for filtering exported entries (Bug 382035).

2017-07-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug of running out of memory when writing very large XML files (Bug 380832).
	* Improved performance for filtering large collections by avoiding needless field value formatting.

2017-05-29  Robby Stephenson  <robby@periapsis.org>

	* Switched from using libdiscid to libcdio, which includes cdtext.

2017-05-06  Robby Stephenson  <robby@periapsis.org>

	* Removed Freebase data source.

2017-05-01  Robby Stephenson  <robby@periapsis.org>

	* Fixed track length for CD audio (Bug 379426).

2017-04-30  Robby Stephenson  <robby@periapsis.org>

	* Added data source for IGDB.com.

2017-04-16  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug showing icons for custom collection (Bug 378852).

2017-04-09  Robby Stephenson  <robby@periapsis.org>

	* Added data source for https://opensource.dbc.dk.
	* Added PEGI rating to GiantBomb results (Bug 375996).

2017-03-27  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.0.2.

2017-03-26  Robby Stephenson  <robby@periapsis.org>

	* Added data source for VideoGameGeek.com

2017-03-25  Robby Stephenson  <robby@periapsis.org>

	* Updated Douban data source to API v2 (from XML to JSON).

2017-03-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with image location for reports, introduced in v3.0.1 (Bug 377790).

2017-03-16  Robby Stephenson  <robby@periapsis.org>

	* Updated the IBS.it data source (Bug 373774).

2017-03-11  Robby Stephenson  <robby@periapsis.org>

	* Added data source for DataPoisk.ru.
