@@ -42,7 +42,7 @@ void RatingDelegate::paint(QPainter* painter, const QStyleOptionViewItem& option
   p.translate(-option.rect.topLeft());
 
   //Paint rating
-  const int rating = index.data(Qt::DisplayRole).toInt();
+  const int rating = qRound(index.data(Qt::DisplayRole).toFloat());
   StarRating starRating = StarRating(rating, StarRating::Medium);
   starRating.setMaxRating(m_maxRating);
   QSize ratingSize = starRating.sizeHint();
